backport: re PR rtl-optimization/53589 (ICE in maybe_record_trace_start with asm goto)

Backported from mainline
	2012-06-12  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/53589
	* cfgrtl.c (force_nonfallthru_and_redirect): Do asm_goto_edge
	discovery even when e->dest != target.  If any LABEL_REF points
	to e->dest label, redirect it to target's label.

	* gcc.dg/torture/pr53589.c: New test.

From-SVN: r188626